logs/hyde.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-0.23.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/commando'...
Listing './lib/python3.5/site-packages/commando-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/fswrap-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/hyde'...
Compiling './lib/python3.5/site-packages/hyde/exceptions.py'...
***   File "./lib/python3.5/site-packages/hyde/exceptions.py", line 10
    raise HydeException(message), None, tb
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hyde/ext'...
Listing './lib/python3.5/site-packages/hyde/ext/plugins'...
Compiling './lib/python3.5/site-packages/hyde/ext/plugins/css.py'...
***   File "./lib/python3.5/site-packages/hyde/ext/plugins/css.py", line 254
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hyde/ext/plugins/images.py'...
***   File "./lib/python3.5/site-packages/hyde/ext/plugins/images.py", line 30
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hyde/ext/publishers'...
Compiling './lib/python3.5/site-packages/hyde/ext/publishers/pyfs.py'...
***   File "./lib/python3.5/site-packages/hyde/ext/publishers/pyfs.py", line 50
    print "Username: ",
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hyde/ext/publishers/pypi.py'...
***   File "./lib/python3.5/site-packages/hyde/ext/publishers/pypi.py", line 50
    print "Username: ",
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hyde/ext/templates'...
Compiling './lib/python3.5/site-packages/hyde/ext/templates/jinja.py'...
***   File "./lib/python3.5/site-packages/hyde/ext/templates/jinja.py", line 128
    print u"Requires AsciiDoc library to use AsciiDoc tag."
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hyde/generator.py'...
***   File "./lib/python3.5/site-packages/hyde/generator.py", line 339
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hyde/layouts'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/blog'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/media'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/media/css'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/media/images'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/media/js'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/media/js/libs'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/content/portfolio'...
Listing './lib/python3.5/site-packages/hyde/layouts/basic/layout'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter/content'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter/content/advanced'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter/content/media'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter/content/media/css'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter/content/media/img'...
Listing './lib/python3.5/site-packages/hyde/layouts/starter/layout'...
Listing './lib/python3.5/site-packages/hyde/lib'...
Listing './lib/python3.5/site-packages/hyde/lib/pygments'...
Compiling './lib/python3.5/site-packages/hyde/plugin.py'...
***   File "./lib/python3.5/site-packages/hyde/plugin.py", line 445
    except subprocess.CalledProcessError, error:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hyde/server.py'...
***   File "./lib/python3.5/site-packages/hyde/server.py", line 168
    except Exception, exception:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hyde-0.8.9.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smartypants-1.8.6.dist-info'...
Listing './lib/python3.5/site-packages/typogrify'...
Listing './lib/python3.5/site-packages/typogrify/packages'...
Listing './lib/python3.5/site-packages/typogrify/packages/titlecase'...
Listing './lib/python3.5/site-packages/typogrify/templatetags'...
Listing './lib/python3.5/site-packages/typogrify-2.0.7.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
